# Practice1

./: Array.h  CMakeLists.txt  CompleteBinaryTree.h  CompleteBinaryTreeOLD.h  HashTable.h  Lab1  Lab1.cpp  Lab2_1  Lab2_1.cpp  Lab2_2  Lab2_2.cpp  Lab2_3  Lab2_3.cpp  Lab2_4  Lab2_4.cpp  Lab2_5  Lab2_5.cpp  Lab4_1  Lab4_1.cpp  Lab4_2  Lab4_2.cpp  Lab4_3  Lab4_3.cpp  Lab5  Lab5.cpp  LinkedLists.h  MyArray.h  MyQueue.h  Node.h  Practice1  Practice1.cpp  Practice2  Practice2.cpp  Practice3.py  Programs.code-workspace  Ptest.py  Queries.txt  Queue.h  Set.h  Stack.h  (+30 more)
my_schema/table1/: 1.csv
my_schema/table2/: 1.csv
